# General-OpenGL-Repos

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragmentshader.fs  light.fs  light.vs  material.fs  material.vs  vertexshader.vs
src/: camera.cpp  camera.hpp  light.cpp  light.hpp  main.cpp  shaderclass.cpp  shaderclass.hpp  textureclass.cpp  textureclass.hpp
